AC_INIT([jugglefest],[1.0],[giovanni@gcavallanti.com])

AC_CONFIG_SRCDIR([src/driver.cpp])

AC_PROG_CXXCPP
AC_PROG_CXX

AM_INIT_AUTOMAKE([1.9])

AC_LANG([C++])

AC_HEADER_STDC
AC_CHECK_HEADERS([string])
AC_CHECK_HEADERS([iostream])

AC_SUBST([AM_CXXFLAGS])
AC_SUBST([AM_LDFLAGS])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

AC_OUTPUT
