bin_PROGRAMS = driver 

driver_SOURCES =	driver.cpp \
					circuit.hpp \
					circuit.cpp \
					circuitassignment.hpp \
					circuitassignment.cpp \
					circuitassignments.hpp \
					circuitassignments.cpp \
					jugglefest.hpp \
					jugglefest.cpp \
					jugglefestparser.hpp \
					jugglefestparser.cpp \
					jugglefestplanner.hpp \
					jugglefestplanner.cpp \
					juggler.hpp \
					juggler.cpp \
					skillset.hpp \
					skillset.cpp \
					types.hpp

